--- a/MyList/MyList.vcxproj.filters
+++ b/MyList/MyList.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="List.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TList.tpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
